--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,10 @@
         <servlet-name>painCare</servlet-name>
         <servlet-class>com.example.paincare.servlets.pain.painCare</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>painTest</servlet-name>
+        <servlet-class>com.example.paincare.servlets.pain.painTest</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>loginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -34,5 +38,9 @@
     <servlet-mapping>
         <servlet-name>painCare</servlet-name>
         <url-pattern>/pain</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>painTest</servlet-name>
+        <url-pattern>/test</url-pattern>
     </servlet-mapping>
 </web-app>
