--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,4 +35,24 @@
         <servlet-name>painCare</servlet-name>
         <url-pattern>/pain</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>UpdateUserProfileServlet</servlet-name>
+        <servlet-class>com.example.paincare.servlets.Profile.UpdateUserProfileServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>UpdateUserProfileServlet</servlet-name>
+        <url-pattern>/Update-user-profile</url-pattern>
+    </servlet-mapping>
+
+
+    <servlet>
+        <servlet-name>ProfileServlet</servlet-name>
+        <servlet-class>com.example.paincare.servlets.Profile.ProfileServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ProfileServlet</servlet-name>
+        <url-pattern>/user-profile</url-pattern>
+    </servlet-mapping>
 </web-app>
