--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
+
     <servlet>
         <servlet-name>loginServlet</servlet-name>
         <servlet-class>com.example.paincare.servlets.authentification.loginServlet</servlet-class>
@@ -23,10 +24,7 @@
         <servlet-name>painTest</servlet-name>
         <servlet-class>com.example.paincare.servlets.pain.painTest</servlet-class>
     </servlet>
-    <servlet>
-        <servlet-name>blog</servlet-name>
-        <servlet-class>com.example.paincare.servlets.blogs.blog</servlet-class>
-    </servlet>
+
     <servlet-mapping>
         <servlet-name>loginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -68,9 +66,23 @@
         <servlet-name>painTest</servlet-name>
         <url-pattern>/test</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>addblog</servlet-name>
+        <servlet-class>com.example.paincare.servlets.blogs.addblog</servlet-class>
+    </servlet>
     <servlet-mapping>
-        <servlet-name>blog</servlet-name>
-        <url-pattern>/blog</url-pattern>
+        <servlet-name>addblog</servlet-name>
+        <url-pattern>/addblog</url-pattern>
 
     </servlet-mapping>
+    <servlet>
+        <servlet-name>viewblog</servlet-name>
+        <servlet-class>com.example.paincare.servlets.blogs.viewblog</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>viewblog</servlet-name>
+        <url-pattern>/viewblog</url-pattern>
+    </servlet-mapping>
+
 </web-app>
